# platform_external_protobuf

./: .gitignore  .gitmodules  Android.bp  Android.mk  BUILD  BUILD.bazel  CHANGES.txt  CMakeLists.txt  METADATA  MacBuild.sh  Makefile.in  OWNERS  README.android  README.version  build.gradle  configure  configure.ac  protobuf.bzl  protobuf_deps.bzl  update_version.py  vendor_suffix_test.config  vendor_suffix_test.cpp
.github/workflows/: test_php.yml
android/: config.h
cmake/: abseil-cpp.cmake  install.cmake  libprotobuf-lite.cmake  libprotobuf.cmake  libprotoc.cmake  protoc.cmake
gtest/msvc/: gtest.vcproj  gtest_main.vcproj
java/: Android.bp  README.txt  pom.xml
java/core/src/stubs/sun/misc/: Unsafe.java
java/core/src/test/java/com/google/protobuf/: RepeatedFieldBuilderTest.java  SingleFieldBuilderTest.java
java/kotlin/: BUILD.bazel
java/src/device/main/java/com/google/protobuf/nano/android/: ParcelableExtendableMessageNano.java  ParcelableMessageNano.java  ParcelingUtil.java
java/src/device/test/java/com/google/protobuf/nano/: NanoAndroidTest.java
java/src/main/java/com/google/protobuf/micro/: CodedInputStreamMicro.java  CodedOutputStreamMicro.java  StringUtf8Micro.java
java/src/main/java/com/google/protobuf/nano/: CodedInputByteBufferNano.java  CodedOutputByteBufferNano.java  ExtendableMessageNano.java  Extension.java  FieldArray.java
java/src/test/java/com/google/protobuf/: MicroTest.java  NanoTest.java
javanano/: pom.xml
javanano/src/device/main/java/com/google/protobuf/nano/android/: ParcelableExtendableMessageNano.java  ParcelableMessageNano.java
javanano/src/main/java/com/google/protobuf/nano/: CodedInputByteBufferNano.java  CodedOutputByteBufferNano.java
javanano/src/test/java/com/google/protobuf/nano/: NanoTest.java
prebuilts/: Android.mk
protobuf.xcodeproj/: project.pbxproj
src/: Makefile.am  Makefile.in
src/google/protobuf/: arena.h  arena_impl.h  arena_nc.cc  descriptor.h  descriptor.pb.cc  extension_set.h  extension_set_heavy.cc  generated_message_reflection.h  map.h  map_entry.h  map_field.h  map_test.cc  map_test.inc  map_type_handler.h  message.h  metadata.h  parse_context.h  port_def.inc  raw_ptr_test.cc  unittest_micro.proto  unittest_multiple_micro.proto  unittest_recursive_micro.proto  unittest_simple_micro.proto  unittest_stringutf8_micro.proto  unknown_field_set.h  wire_format.h  wire_format_lite.h  wire_format_lite_inl.h
src/google/protobuf/compiler/: command_line_interface.cc  main.cc
src/google/protobuf/compiler/cpp/: cpp_enum.cc  cpp_enum_field.cc  cpp_file.cc  cpp_message.cc  cpp_primitive_field.cc  cpp_string_field.cc  cpp_test_bad_identifiers.pb.cc  cpp_test_bad_identifiers.pb.h  cpp_test_large_enum_value.pb.cc  cpp_test_large_enum_value.pb.h  cpp_unittest.inc  file.cc  helpers.cc  message.cc  message_field.cc  parse_function_generator.cc  string_field.cc  unittest.inc
src/google/protobuf/compiler/java/: enum_field_lite.cc  java_file.cc  java_shared_code_generator.cc  message_field_lite.cc  string_field_lite.cc
src/google/protobuf/compiler/javamicro/: javamicro_enum.h  javamicro_enum_field.cc  javamicro_enum_field.h  javamicro_field.h  javamicro_file.cc  javamicro_file.h  javamicro_generator.cc  javamicro_generator.h  javamicro_helpers.cc  javamicro_helpers.h  javamicro_message.cc  javamicro_message_field.cc  javamicro_message_field.h  javamicro_params.h  javamicro_primitive_field.cc  javamicro_primitive_field.h
src/google/protobuf/compiler/javanano/: javanano_enum.cc  javanano_enum_field.cc  javanano_enum_field.h  javanano_extension.cc  javanano_extension.h  javanano_field.cc  javanano_field.h  javanano_file.cc  javanano_file.h  javanano_generator.cc  javanano_generator.h  javanano_helpers.cc  javanano_helpers.h  javanano_map_field.cc  javanano_map_field.h  javanano_message.cc  javanano_message.h  javanano_message_field.cc  javanano_message_field.h  javanano_params.h  javanano_primitive_field.cc  javanano_primitive_field.h
src/google/protobuf/io/: coded_stream.h
src/google/protobuf/stubs/: common.cc  map_util.h  mutex.h  port.h  shared_ptr.h  status.h  statusor.h
src/google/protobuf/testing/: googletest.cc
src/google/protobuf/util/: json_util.cc  json_util.h  json_util_test.cc
src/google/protobuf/util/internal/: default_value_objectwriter.cc  default_value_objectwriter.h  protostream_objectsource.cc  protostream_objectsource.h  protostream_objectsource_test.cc  utility.cc
src/google/protobuf/util/internal/testdata/: books.proto
vsprojects/: libprotobuf-lite.vcproj  libprotobuf.vcproj  libprotoc.vcproj  lite-test.vcproj  protoc.vcproj  test_plugin.vcproj  tests.vcproj
